meta-memfault/recipes-memfault/memfaultd/files/memfaultd/src/cli/memfault_core_handler/snapshots/memfaultd__cli__memfault_core_handler__core_metadata__test__serialize_metadata_as_map.snap
---
source: memfaultd/src/cli/memfault_core_handler/core_metadata.rs
expression: deser_map
---
Map(
    [
        (
            Integer(
                Integer(
                    1,
                ),
            ),
            Integer(
                Integer(
                    1,
                ),
            ),
        ),
        (
            Integer(
                Integer(
                    2,
                ),
            ),
            Text(
                "SDK_VERSION",
            ),
        ),
        (
            Integer(
                Integer(
                    3,
                ),
            ),
            Integer(
                Integer(
                    1234,
                ),
            ),
        ),
        (
            Integer(
                Integer(
                    4,
                ),
            ),
            Text(
                "12345678",
            ),
        ),
        (
            Integer(
                Integer(
                    5,
                ),
            ),
            Text(
                "evt",
            ),
        ),
        (
            Integer(
                Integer(
                    6,
                ),
            ),
            Text(
                "main",
            ),
        ),
        (
            Integer(
                Integer(
                    7,
                ),
            ),
            Text(
                "1.0.0",
            ),
        ),
    ],
)
